# brickpack

./: Cargo.toml  Insomnia.json  Makefile  README.md  deny.toml  justfile
src/applet-runner/: Cargo.toml
src/applet-runner/src/: lib.rs
src/applet-runner/src/model/: applet.rs  mod.rs  request_data.rs
src/applet-runner/src/runner/: echo.rs  mod.rs
src/applet-runner/tests/: mod.rs  run_applet.rs
src/application-endpoints/: Cargo.toml
src/application-endpoints/src/: auth.rs  health.rs  lib.rs
src/application-endpoints/src/api/: mod.rs
src/application-endpoints/src/api/applets/: mod.rs
src/application-endpoints/src/api/applets/create/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/applets/delete/: mod.rs  model.rs  presenter.rs  view.rs
src/application-endpoints/src/api/applets/read/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/applets/read_all/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/applets/read_count/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/applets/update/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/: mod.rs
src/application-endpoints/src/api/departments/create/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/delete/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/read/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/read_all/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/read_count/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/departments/update/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/: mod.rs
src/application-endpoints/src/api/permissions/create/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/delete/: mod.rs  model.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/read/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/read_all/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/read_count/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/permissions/update/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/runner/: mod.rs
src/application-endpoints/src/api/runner/run_applet_get/: mod.rs  model.rs  view.rs
src/application-endpoints/src/api/runner/run_applet_post/: mod.rs  outcome.rs  presenter.rs
src/application-endpoints/src/api/statuses/: mod.rs
src/application-endpoints/src/api/statuses/create/: mod.rs  model.rs  outcome.rs  presenter.rs  view.rs
src/application-endpoints/src/api/users/: mod.rs
src/application-endpoints/src/extractors/: json.rs  mod.rs  path.rs  query_string.rs
src/application-models/: Cargo.toml  sqlx-data.json  sqlx-prepare.sh
src/application-models/migrations/: 20211231034234_init.sql
src/application-models/src/: database.rs  lib.rs
src/application-models/src/applets/: mod.rs
src/application-models/src/applets/model/: code.rs  created_at.rs  filename.rs  id.rs  is_deleted.rs  mod.rs  oid.rs  size.rs  updated_at.rs
src/application-models/src/applets/repo/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/application-models/src/departments/: mod.rs
src/application-models/src/departments/model/: created_at.rs  id.rs  is_deleted.rs  mod.rs  name.rs  oid.rs  updated_at.rs
src/application-models/src/departments/repo/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/application-models/src/permissions/: mod.rs
src/application-models/src/permissions/model/: created_at.rs  id.rs  is_deleted.rs  mod.rs  name.rs  oid.rs  updated_at.rs
src/application-models/src/permissions/repo/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/application-models/src/statuses/: mod.rs
src/application-models/src/statuses/model/: created_at.rs  id.rs  is_deleted.rs  mod.rs  name.rs  oid.rs  updated_at.rs
src/application-models/src/statuses/repo/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/application-models/src/users/: mod.rs
src/application-models/src/users/model/: created_at.rs  department.rs  email.rs  id.rs  is_deleted.rs  mod.rs  name.rs  oid.rs  permission.rs  status.rs  updated_at.rs
src/application-models/src/users/repo/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/application-models/tests/: common.rs  mod.rs
src/application-models/tests/applets/: model.rs  repo.rs
src/application-models/tests/departments/: model.rs  repo.rs
src/application-models/tests/permissions/: mod.rs  model.rs  repo.rs
src/application-models/tests/statuses/: model.rs  repo.rs
src/application-models/tests/users/: mod.rs  models.rs  repo.rs
src/application-session/: Cargo.toml
src/application-session/src/: flash.rs  lib.rs
src/design-scaffold/: Cargo.toml
src/design-scaffold/src/: endpoint.rs  error.rs  lib.rs  oid.rs  paging.rs  repo.rs  validators.rs
src/launcher/: Cargo.toml
src/launcher/src/: app.rs  main.rs
src/web-server/: Cargo.toml
src/web-server/src/: config.rs  lib.rs  server.rs
src/web-ui/: Cargo.toml
src/web-ui/artifacts/: main.html
src/web-ui/artifacts/js/: main.js
src/web-ui/main_page/: .gitignore  Makefile  elm-loader.js  elm-review.sh  elm.json  main.html  run.sh
src/web-ui/main_page/src/: Main.elm  Model.elm
src/web-ui/main_page/src/Data/: HttpDataAppletArtifact.elm  HttpDataApplets.elm
src/web-ui/main_page/src/Layout/: Base.elm  MainPage.elm
src/web-ui/main_page/src/Themes/: Base.elm  Dark.elm  Light.elm
src/web-ui/main_page/src/UIC/: BasicPanel.elm  Buttons.elm  Hello.elm  Misc.elm  ResultButtons.elm  Tooltip.elm
src/web-ui/src/: lib.rs
(+86 files in other folders)
