[package]
edition = "2021"
rust-version = "1.58.0"
name = "applet-runner"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
base64 = "0.13.0"
http = "0.2.8"
mlua = { version = "0.8.1", features = [
    "luajit",
    "vendored",
    "macros",
    "serde",
] }
serde = { version = "1.0.138", features = ["derive"] }
tracing = "0.1.35"


application-models = { path = "../application-models" }
design-scaffold = { path = "../design-scaffold" }
bytesize = "1.1.0"


[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
