[package]
edition = "2021"
rust-version = "1.58.0"
name = "application-endpoints"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
async-trait = "0.1.56"
axum = { version = "0.5.11", features = ["headers"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_qs = "0.9.2"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "offline",
] }
tracing = "0.1.35"

applet-runner = { path = "../applet-runner" }
application-models = { path = "../application-models" }
design-scaffold = { path = "../design-scaffold" }
