[package]
edition = "2021"
rust-version = "1.58.0"
name = "application-models"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
async-trait = "0.1.56"
base64 = "0.13.0"
bytesize = "1.1.0"
# chrono = { version = "0.4.19", features = ["serde"] }
full_moon = "0.15.1"
regex = "1.5.6"
serde = { version = "1.0.138", features = ["derive"] }
sha2 = "0.10.2"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "offline",
    "chrono",
] }
tracing = { version = "0.1.35", features = ["log"] }
ulid = "0.6.0"


design-scaffold = { path = "../design-scaffold" }


[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.82"
