[package]
edition = "2021"
rust-version = "1.58.0"
name = "design-scaffold"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
async-trait = "0.1.56"
axum = "0.5.11"
base64 = "0.13.0"
mlua = { version = "0.8.1", features = [
    "luajit",
    "vendored",
    "macros",
    "serde",
] }
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "offline",
] }
serde = { version = "1.0.138", features = ["derive"] }
serde_qs = "0.9.2"
thiserror = "1.0.31"
tracing = "0.1.35"
ulid = "0.6.0"
sha2 = "0.10.2"
chrono = "0.4.19"
tokio = { version = "1.19.2", features = ["full"] }
rand = "0.8.5"
