[package]
publish = false
edition = "2021"
rust-version = "1.69.0"

name = "launcher"
version = "0.0.2"
description = "Just another updated version of Brickpack scaffold system for Rust"
authors = ["https://github.com/afsec"]
license = "MIT"


[[bin]]
name = "brickpack-2023"
path = "src/main.rs"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { version = "1.28.1", features = ["full", "tracing"] }
design-scaffold = { path = "../design-scaffold" }
web-server = { path = "../web-server" }
hostname-validator = "1.1.1"
