[package]
edition = "2021"
rust-version = "1.58.0"
name = "web-server"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
anyhow = "1.0.58"
axum = "0.5.11"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
clap = "3.2.8"
console-subscriber = "0.1.6"
rcgen = "0.9.2"
rustls = "0.20.6"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tokio = "1.19.2"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }

web-ui = { path = "../web-ui" }
application-endpoints = { path = "../application-endpoints" }
application-models = { path = "../application-models" }
design-scaffold = { path = "../design-scaffold" }
tower-cookies = "0.7.0"
