[package]
edition = "2021"
rust-version = "1.58.0"
name = "web-ui"
version = "0.1.0"
authors = ["Antonio Costa - https://github.com/afsec"]
license = "MIT"


[dependencies]
axum = "0.5.11"
tokio = "1.19.2"
tower-cookies = "0.7.0"
tracing = "0.1.35"
application-session = { path = "../application-session" }
